--- a/environment.yml
+++ b/environment.yml
@@ -16,3 +16,6 @@ dependencies:
     - django-cors-headers
     - openai
     - Pillow
+    - python-dotenv
+    - psycopg2-binary
+    - dj_database_url
